fixed images vs iframes not showing up correctly

--- a/styles/base.css
+++ b/styles/base.css
@@ -93,3 +93,17 @@ a[class^='icon-'] {
     top: 2px;
   }
 }
+.media {
+  width: 40em;
+  height: 20em;
+  overflow: hidden;
+}
+.media * {
+
+  display: block;
+}
+
+.media iframe {
+   width: 100%;
+  height: 100%; 
+}
